@@ -35,7 +35,7 @@ Developer Version
 	- 1.0.7 Development
 	- 1.1.0 Development
 
-Building Steps: 2386
+Building Steps: 2400
 
 
 
@@ -43,8 +43,13 @@ Building Steps: 2386
 -----------------------------------------------------------------
 
  - bug #0000122: login on frontpage
+ - bug #0000125: .xml error after installation
  - bug #0000105: cross-site scripting security bug
  - bug #0000140: feeds with special chars
+ - bug #0000138: feature: regenerate feeds on saving new news
+ - bug #0000116: newsletter emails in html
+ - bug #0000129: editing topmenu internet links
+ - bug #0000144: editing news from frontpage
 
  - security fixed: cross-site scripting security bug
 
